--- a/cybersecurity1.ipynb
+++ b/cybersecurity1.ipynb
@@ -6,7 +6,7 @@
       "name": "cybersecurity1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNuUzjmsnyzIv/m0qtN3V0H",
+      "authorship_tag": "ABX9TyPZTGv6AwEIQyhqYCsQ/w9s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,9 +95,9 @@
         "  match = re.search('(?i)(whatsapp)|( pv )| (negociação de valor)|(por fora)|(pv)|(número de telefone)|(contato privado)|(envio por fora)|(pagamento via pix)|(conta bancária)|(entrega pessoal)|(depósito bancário)|(depósito bancário pessoal)|(CPf)|(informações pessoais)|(telefone)|(venda por outro site)|(venda por outra plataforma)|(venda via whatsapp)|(contato via whats)|(pagamento via whatsapp)|(negócios via whatsapp.)', field.lower())\n",
         "\n",
         "  if match:\n",
-        "    print(\"Fraude? Não\")\n",
+        "    print(\"Fraude? Sim\")\n",
         "  else:\n",
-        "    print(\"FraudeS? Sim\")\n",
+        "    print(\"FraudeS? Não\")\n",
         "\n",
         "getMatchRegex(input()) \n"
       ],
